Actividad5/expresiones.output
Estado 19 conflictos: 2 desplazamiento/reducción
Estado 20 conflictos: 1 desplazamiento/reducción
Estado 40 conflictos: 1 desplazamiento/reducción
Estado 47 conflictos: 1 desplazamiento/reducción
Estado 48 conflictos: 1 desplazamiento/reducción
Estado 49 conflictos: 1 desplazamiento/reducción
Estado 50 conflictos: 1 desplazamiento/reducción
Estado 51 conflictos: 1 desplazamiento/reducción
Estado 52 conflictos: 7 desplazamiento/reducción
Estado 53 conflictos: 2 desplazamiento/reducción
Estado 54 conflictos: 2 desplazamiento/reducción


Gramática

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: SALIR '\n'
    4      | ID ASIGNACION expr '\n'
    5      | ID ASIGNACION logica '\n'
    6      | error '\n'

    7 expr: NUMERO
    8     | REAL
    9     | expr '+' expr
   10     | expr '-' expr
   11     | expr '*' expr
   12     | expr '/' expr
   13     | expr DIV expr
   14     | expr '%' expr
   15     | expr '^' expr
   16     | '-' expr
   17     | '(' expr ')'

   18 logica: BOOL
   19       | logica AND logica
   20       | logica OR logica
   21       | NOT logica
   22       | expr DISTINTO expr
   23       | expr IGUAL expr
   24       | expr MENORIGUAL expr
   25       | expr MAYOR expr
   26       | expr MAYORIGUAL expr
   27       | expr MENOR expr


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4 5 6
    '%' (37) 14
    '(' (40) 17
    ')' (41) 17
    '*' (42) 11
    '+' (43) 9
    '-' (45) 10 16
    '/' (47) 12
    '^' (94) 15
    error (256) 6
    SALIR (258) 3
    DIV (259) 13
    AND (260) 19
    OR (261) 20
    NOT (262) 21
    MENOR (263) 27
    MAYORIGUAL (264) 26
    MAYOR (265) 25
    MENORIGUAL (266) 24
    IGUAL (267) 23
    DISTINTO (268) 22
    ASIGNACION (269) 4 5
    NUMERO <c_entero> (270) 7
    ID <var> (271) 4 5
    REAL <c_real> (272) 8
    BOOL <c_bool> (273) 18
    menos (274)


No terminales con las reglas donde aparecen

    $accept (29)
        on left: 0
    entrada (30)
        on left: 1 2
        on right: 0 2
    linea (31)
        on left: 3 4 5 6
        on right: 2
    expr <c_expresion> (32)
        on left: 7 8 9 10 11 12 13 14 15 16 17
        on right: 4 9 10 11 12 13 14 15 16 17 22 23 24 25 26 27
    logica <c_bool> (33)
        on left: 18 19 20 21 22 23 24 25 26 27
        on right: 5 19 20 21


Estado 0

    0 $accept: • entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end   desplazar e ir al estado 2
    error  desplazar e ir al estado 3
    SALIR  desplazar e ir al estado 4
    ID     desplazar e ir al estado 5

    linea  ir al estado 6


Estado 2

    0 $accept: entrada $end •

    $default  aceptar


Estado 3

    6 linea: error • '\n'

    '\n'  desplazar e ir al estado 7


Estado 4

    3 linea: SALIR • '\n'

    '\n'  desplazar e ir al estado 8


Estado 5

    4 linea: ID • ASIGNACION expr '\n'
    5      | ID • ASIGNACION logica '\n'

    ASIGNACION  desplazar e ir al estado 9


Estado 6

    2 entrada: entrada linea •

    $default  reduce usando la regla 2 (entrada)


Estado 7

    6 linea: error '\n' •

    $default  reduce usando la regla 6 (linea)


Estado 8

    3 linea: SALIR '\n' •

    $default  reduce usando la regla 3 (linea)


Estado 9

    4 linea: ID ASIGNACION • expr '\n'
    5      | ID ASIGNACION • logica '\n'

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 16
    logica  ir al estado 17


Estado 10

   21 logica: NOT • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 19


Estado 11

    7 expr: NUMERO •

    $default  reduce usando la regla 7 (expr)


Estado 12

    8 expr: REAL •

    $default  reduce usando la regla 8 (expr)


Estado 13

   18 logica: BOOL •

    $default  reduce usando la regla 18 (logica)


Estado 14

   16 expr: '-' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 20


Estado 15

   17 expr: '(' • expr ')'

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 21


Estado 16

    4 linea: ID ASIGNACION expr • '\n'
    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   22 logica: expr • DISTINTO expr
   23       | expr • IGUAL expr
   24       | expr • MENORIGUAL expr
   25       | expr • MAYOR expr
   26       | expr • MAYORIGUAL expr
   27       | expr • MENOR expr

    DIV         desplazar e ir al estado 22
    MENOR       desplazar e ir al estado 23
    MAYORIGUAL  desplazar e ir al estado 24
    MAYOR       desplazar e ir al estado 25
    MENORIGUAL  desplazar e ir al estado 26
    IGUAL       desplazar e ir al estado 27
    DISTINTO    desplazar e ir al estado 28
    '+'         desplazar e ir al estado 29
    '-'         desplazar e ir al estado 30
    '*'         desplazar e ir al estado 31
    '/'         desplazar e ir al estado 32
    '%'         desplazar e ir al estado 33
    '\n'        desplazar e ir al estado 34
    '^'         desplazar e ir al estado 35


Estado 17

    5 linea: ID ASIGNACION logica • '\n'
   19 logica: logica • AND logica
   20       | logica • OR logica

    AND   desplazar e ir al estado 36
    OR    desplazar e ir al estado 37
    '\n'  desplazar e ir al estado 38


Estado 18

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   22 logica: expr • DISTINTO expr
   23       | expr • IGUAL expr
   24       | expr • MENORIGUAL expr
   25       | expr • MAYOR expr
   26       | expr • MAYORIGUAL expr
   27       | expr • MENOR expr

    DIV         desplazar e ir al estado 22
    MENOR       desplazar e ir al estado 23
    MAYORIGUAL  desplazar e ir al estado 24
    MAYOR       desplazar e ir al estado 25
    MENORIGUAL  desplazar e ir al estado 26
    IGUAL       desplazar e ir al estado 27
    DISTINTO    desplazar e ir al estado 28
    '+'         desplazar e ir al estado 29
    '-'         desplazar e ir al estado 30
    '*'         desplazar e ir al estado 31
    '/'         desplazar e ir al estado 32
    '%'         desplazar e ir al estado 33
    '^'         desplazar e ir al estado 35


Estado 19

   19 logica: logica • AND logica
   20       | logica • OR logica
   21       | NOT logica •

    AND  desplazar e ir al estado 36
    OR   desplazar e ir al estado 37

    AND       [reduce usando la regla 21 (logica)]
    OR        [reduce usando la regla 21 (logica)]
    $default  reduce usando la regla 21 (logica)


Estado 20

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   16     | '-' expr •

    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 16 (expr)]
    $default  reduce usando la regla 16 (expr)


Estado 21

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   17     | '(' expr • ')'

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35
    ')'  desplazar e ir al estado 39


Estado 22

   13 expr: expr DIV • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 40


Estado 23

   27 logica: expr MENOR • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 41


Estado 24

   26 logica: expr MAYORIGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 42


Estado 25

   25 logica: expr MAYOR • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 43


Estado 26

   24 logica: expr MENORIGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 44


Estado 27

   23 logica: expr IGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 45


Estado 28

   22 logica: expr DISTINTO • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 46


Estado 29

    9 expr: expr '+' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 47


Estado 30

   10 expr: expr '-' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 48


Estado 31

   11 expr: expr '*' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 49


Estado 32

   12 expr: expr '/' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 50


Estado 33

   14 expr: expr '%' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 51


Estado 34

    4 linea: ID ASIGNACION expr '\n' •

    $default  reduce usando la regla 4 (linea)


Estado 35

   15 expr: expr '^' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr  ir al estado 52


Estado 36

   19 logica: logica AND • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 53


Estado 37

   20 logica: logica OR • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 54


Estado 38

    5 linea: ID ASIGNACION logica '\n' •

    $default  reduce usando la regla 5 (linea)


Estado 39

   17 expr: '(' expr ')' •

    $default  reduce usando la regla 17 (expr)


Estado 40

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   13     | expr DIV expr •
   14     | expr • '%' expr
   15     | expr • '^' expr

    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 13 (expr)]
    $default  reduce usando la regla 13 (expr)


Estado 41

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   27 logica: expr MENOR expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 27 (logica)


Estado 42

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   26 logica: expr MAYORIGUAL expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 26 (logica)


Estado 43

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   25 logica: expr MAYOR expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 25 (logica)


Estado 44

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   24 logica: expr MENORIGUAL expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 24 (logica)


Estado 45

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   23 logica: expr IGUAL expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 23 (logica)


Estado 46

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   22 logica: expr DISTINTO expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    $default  reduce usando la regla 22 (logica)


Estado 47

    9 expr: expr • '+' expr
    9     | expr '+' expr •
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr

    DIV  desplazar e ir al estado 22
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 9 (expr)]
    $default  reduce usando la regla 9 (expr)


Estado 48

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   10     | expr '-' expr •
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr

    DIV  desplazar e ir al estado 22
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 10 (expr)]
    $default  reduce usando la regla 10 (expr)


Estado 49

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   11     | expr '*' expr •
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr

    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 11 (expr)]
    $default  reduce usando la regla 11 (expr)


Estado 50

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   12     | expr '/' expr •
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr

    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 12 (expr)]
    $default  reduce usando la regla 12 (expr)


Estado 51

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   14     | expr '%' expr •
   15     | expr • '^' expr

    '^'  desplazar e ir al estado 35

    '^'       [reduce usando la regla 14 (expr)]
    $default  reduce usando la regla 14 (expr)


Estado 52

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | expr • '^' expr
   15     | expr '^' expr •

    DIV  desplazar e ir al estado 22
    '+'  desplazar e ir al estado 29
    '-'  desplazar e ir al estado 30
    '*'  desplazar e ir al estado 31
    '/'  desplazar e ir al estado 32
    '%'  desplazar e ir al estado 33
    '^'  desplazar e ir al estado 35

    DIV       [reduce usando la regla 15 (expr)]
    '+'       [reduce usando la regla 15 (expr)]
    '-'       [reduce usando la regla 15 (expr)]
    '*'       [reduce usando la regla 15 (expr)]
    '/'       [reduce usando la regla 15 (expr)]
    '%'       [reduce usando la regla 15 (expr)]
    '^'       [reduce usando la regla 15 (expr)]
    $default  reduce usando la regla 15 (expr)


Estado 53

   19 logica: logica • AND logica
   19       | logica AND logica •
   20       | logica • OR logica

    AND  desplazar e ir al estado 36
    OR   desplazar e ir al estado 37

    AND       [reduce usando la regla 19 (logica)]
    OR        [reduce usando la regla 19 (logica)]
    $default  reduce usando la regla 19 (logica)


Estado 54

   19 logica: logica • AND logica
   20       | logica • OR logica
   20       | logica OR logica •

    AND  desplazar e ir al estado 36
    OR   desplazar e ir al estado 37

    AND       [reduce usando la regla 20 (logica)]
    OR        [reduce usando la regla 20 (logica)]
    $default  reduce usando la regla 20 (logica)
